# ida-lifter

./: .gitignore  CMakeLists.txt  Makefile  README.md  avx_demo.cpp  avx_demo_reconst.cpp  codes.txt
ida-cmake/: .gitignore  README.md  bootstrap.cmake  idasdkConfig.cmake  idasdkConfigVersion.cmake
ida-cmake/cmake/: compiler.cmake  platform.cmake  utilities.cmake
src/avx/: avx_debug.cpp  avx_debug.h  avx_helpers.cpp  avx_helpers.h  avx_intrinsic.cpp  avx_intrinsic.h  avx_lifter.cpp  avx_lifter.h  avx_types.cpp  avx_types.h  avx_utils.cpp  avx_utils.h  conversions.h
src/avx/handlers/: avx_handlers.h  handler_cvt.cpp  handler_logic.cpp  handler_math.cpp  handler_mov.cpp
src/common/: warn_off.h  warn_on.h
src/inline/: inline_component.cpp  inline_component.h
src/plugin/: component_registry.cpp  component_registry.h  lifter_plugin.cpp
test/: CMakeLists.txt  Makefile  README.md
test/experimental/avx10/: .gitignore  Makefile  avx10_missing_asm_latest.txt  avx512_avx10_comprehensive.c  report_missing_asm.py
test/experimental/rax-corpus/: Makefile  find_missing_rax_avx.py
test/integration/: test_avx512_bcast_shuffle.c
test/physics/: Makefile
test/physics/src/: asteroid.c  bullet.c  common.h  fluid.c  interplanetary.c  main.c  math_avx.h  nbody.c  particles.c  shooter_main.c  vis.c  waves.c
test/shooter/: CMakeLists.txt
test/shooter/include/ai/: behavior_tree.h  enemy_ai_advanced.h  influence_avx.h  neural_net.h  player_ai_advanced.h  prediction.h
test/shooter/include/physics/: physics_avx.h
test/shooter/src/ai/: enemy_ai.c  enemy_ai_advanced.c  player_ai_advanced.c
test/shooter/src/core/: game.c
test/shooter/src/physics/: physics_avx.c
test/torture/: CONDITIONS.md  Makefile  README.md  flags.txt  gen_abi_torture.py  gen_asm_torture.py  gen_evex_fringe.py  gen_illegal.py  gen_torture.py  run_torture.py  torture_matrix.py
test/torture/known-issues/lifter-zmm-call-50920/: REPORT.md  build.sh  repro.c
tests/src/: test_avx512_addps.c  test_avx512_mem_addps.c  test_fluid_advect.c  test_fluid_diffuse.c
